--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,8 +9,9 @@
 
 <!-- CSS
 ================================================== -->
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/colors/main.css" id="colors">
+<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/colors/main.css" id="colors">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css">
 
 </head>
 
@@ -110,7 +111,7 @@
 						<% if (typeof user == 'object' && user) { %>
 						<li><a href="logout">Log Out </a> </li>
 						<%}else {%>
-					
+
 							<%}%>
 
 
