--- a/views/login-signup.ejs
+++ b/views/login-signup.ejs
@@ -50,9 +50,9 @@
 
 
 							<p class="form-row form-row-wide">
-						<label for="username">Username:
+						<label for="email">Email:
 							<i class="im im-icon-Male"></i>
-							<input type="text" class="input-text" name="username" id="username" value="" />
+							<input type="text" class="input-text" name="email" id="username" value="" />
 						</label>
 					</p>
 
@@ -97,13 +97,7 @@
 						<input type="text" class="input-text" name="firstName" id="firstName" value="" />
 					</label>
 				</p>
-				<p class="form-row form-row-wide">
-					<label for="username">Username:
-						<i class="im im-icon-Male"></i>
-						<input type="text" class="input-text" name="username" id="username2" value="" />
-					</label>
-				</p>
-
+				
 				<p class="form-row form-row-wide">
 					<label for="email">Email Address:
 						<i class="im im-icon-Mail"></i>
