FINISED USER SIGNUP LOGIN

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
 ================================================== -->
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/colors/main.css" id="colors">
-
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css">
 </head>
 
 <body>
@@ -110,7 +110,7 @@
 						<% if( typeof user !== 'undefined' && user.firstName ){ %>
 						<li><a href="logout">Log Out </a> </li>
 						<%}else {%>
-								
+
 							<% }%>
 
 
